Test virtual thread